fix:list font size on mobile

--- a/assets/_sass/styles.scss
+++ b/assets/_sass/styles.scss
@@ -244,6 +244,10 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
         line-height: 24px;
         margin-top: 20px;
       }
+
+      li {
+        font-size: 16px;
+      }
       padding-bottom: 20px;
     }
   }
@@ -504,11 +508,9 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
     @include media($mobile) {
       p {
         font-size: 16px;
-        // line-height: 24px;
       }
       ol, li {
         font-size: 16px;
-        // line-height: 20px;
       }
 
       h2, h3, p, ol, ul {
